[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 将数据序列化为二进制
bincode = "1.3.3"
serde = {version = "1.0",features = ["derive"]}
# hash算法
sha2 = "0.10.8"
chrono = "0.4"
derive_more = "0.99.17"